RESOLVED FIXED Bug 54922
RenderTableCell::baselinePosition() confuses clang's -Woverloaded-virtual
https://bugs.webkit.org/show_bug.cgi?id=54922
Summary RenderTableCell::baselinePosition() confuses clang's -Woverloaded-virtual
Nico Weber
Reported 2011-02-21 18:27:40 PST
RenderTableCell::baselinePosition() confuses clang's -Woverloaded-virtual
Attachments
Patch (4.57 KB, patch)
2011-02-21 18:29 PST, Nico Weber
no flags
Nico Weber
Comment 1 2011-02-21 18:29:33 PST
Nico Weber
Comment 2 2011-02-21 19:06:47 PST
clang says: In file included from third_party/WebKit/Source/WebCore/rendering/FixedTableLayout.cpp:26: third_party/WebKit/Source/WebCore/rendering/RenderTableCell.h:101:9:error: 'WebCore::RenderTableCell::baselinePosition' hides overloaded virtual function [-Woverloaded-virtual] int baselinePosition() const; ^ In file included from third_party/WebKit/Source/WebCore/rendering/FixedTableLayout.cpp:25: In file included from third_party/WebKit/Source/WebCore/rendering/RenderTable.h:29: third_party/WebKit/Source/WebCore/rendering/RenderBlock.h:63:17: note: hidden overloaded virtual function 'WebCore::RenderBlock::baselinePosition' declared here virtual int baselinePosition(FontBaseline, bool firstLine, LineDirectionMode, LinePositionMode = PositionOnContainingLine) const;
WebKit Commit Bot
Comment 3 2011-02-21 22:46:41 PST
Comment on attachment 83253 [details] Patch Clearing flags on attachment: 83253 Committed r79292: <http://trac.webkit.org/changeset/79292>
WebKit Commit Bot
Comment 4 2011-02-21 22:46:45 PST
All reviewed patches have been landed. Closing bug.
WebKit Commit Bot
Comment 5 2011-02-21 23:04:33 PST
The commit-queue encountered the following flaky tests while processing attachment 83253 [details]: animations/combo-transform-translate+scale.html bug 50958 (authors: cmarrin@apple.com, darin@apple.com, ojan@chromium.org, and pol@apple.com) The commit-queue is continuing to process your patch.
Note You need to log in before you can comment on or make changes to this bug.