2011-02-21  Nico Weber  <thakis@chromium.org>

Reviewed by Adam Barth.

        RenderTableCell::baselinePosition() confuses clang's -Woverloaded-virtual
        https://bugs.webkit.org/show_bug.cgi?id=54922

        RenderTableCell::baselinePosition() has the same name as a virtual
        method in superclass RenderBlock. Rename the subclass method to make
        it clear it's not an attempted override.

        No intended functionality change.

        * rendering/RenderTableCell.cpp:
        (WebCore::RenderTableCell::cellBaselinePosition):
        * rendering/RenderTableCell.h:
        * rendering/RenderTableSection.cpp:
        (WebCore::RenderTableSection::calcRowLogicalHeight):
        (WebCore::RenderTableSection::layoutRows):

Canonical link: https://commits.webkit.org/69215@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79292 268f45cc-cd09-0410-ab3c-d52691b4dbfc